# atlas-project-template

./: .gitignore  LICENSE  Makefile  README.md  atlas.hcl  cloud-formation.yaml  pyproject.toml
scripts/: check.sh  create.sh  download_atlas.sh  hash.sh  install-atlas-and-docker.sh  load_models.py  update_cfn_hash.sh
src/db/: models.py  session.py
src/db/migrations/: 20241023094405.sql  20241024100320.sql  atlas.sum
src/migration_lambda/: apply.py  aws.py  cfn_response.py  dirs.py  error_on_lambda_timeout.py  verify_migrations.py
tests/: .test.env  conftest.py  data.py  test_load_models.py
tests/db/functional/: test_session.py
tests/migration_lambda/: util.py
tests/migration_lambda/functional/: test_aws.py
tests/migration_lambda/unit/: test_apply.py  test_aws.py  test_cfn_response.py  test_error_on_lambda_timeout.py  test_verify_migrations.py
